--- a/GigHub/GigHub.csproj
+++ b/GigHub/GigHub.csproj
@@ -205,9 +205,20 @@
     <Compile Include="Migrations\201901030259431_InitialModel.Designer.cs">
       <DependentUpon>201901030259431_InitialModel.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201901030334000_CreateGigTable.cs" />
+    <Compile Include="Migrations\201901030334000_CreateGigTable.Designer.cs">
+      <DependentUpon>201901030334000_CreateGigTable.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201901030403464_OverrideConventionsForGigsAndGenres.cs" />
+    <Compile Include="Migrations\201901030403464_OverrideConventionsForGigsAndGenres.Designer.cs">
+      <DependentUpon>201901030403464_OverrideConventionsForGigsAndGenres.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
-    <Compile Include="Models\IdentityModels.cs" />
+    <Compile Include="Models\ApplicationDbContext.cs" />
+    <Compile Include="Models\Genre.cs" />
+    <Compile Include="Models\Gig.cs" />
+    <Compile Include="Models\ApplicationUser.cs" />
     <Compile Include="Models\ManageViewModels.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
@@ -287,6 +298,12 @@
   <ItemGroup>
     <EmbeddedResource Include="Migrations\201901030259431_InitialModel.resx">
       <DependentUpon>201901030259431_InitialModel.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201901030334000_CreateGigTable.resx">
+      <DependentUpon>201901030334000_CreateGigTable.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201901030403464_OverrideConventionsForGigsAndGenres.resx">
+      <DependentUpon>201901030403464_OverrideConventionsForGigsAndGenres.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
