populate genres table

--- a/GigHub/GigHub.csproj
+++ b/GigHub/GigHub.csproj
@@ -25,6 +25,7 @@
     <UseGlobalApplicationHostFile />
     <NuGetPackageImportStamp>
     </NuGetPackageImportStamp>
+    <Use64BitIISExpress />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -213,6 +214,10 @@
     <Compile Include="Migrations\201901030403464_OverrideConventionsForGigsAndGenres.Designer.cs">
       <DependentUpon>201901030403464_OverrideConventionsForGigsAndGenres.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201901032319375_PopulateGenresTable.cs" />
+    <Compile Include="Migrations\201901032319375_PopulateGenresTable.Designer.cs">
+      <DependentUpon>201901032319375_PopulateGenresTable.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\ApplicationDbContext.cs" />
@@ -304,6 +309,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201901030403464_OverrideConventionsForGigsAndGenres.resx">
       <DependentUpon>201901030403464_OverrideConventionsForGigsAndGenres.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201901032319375_PopulateGenresTable.resx">
+      <DependentUpon>201901032319375_PopulateGenresTable.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
