--- a/GigHub/GigHub.csproj
+++ b/GigHub/GigHub.csproj
@@ -219,6 +219,10 @@
     <Compile Include="Migrations\201901032319375_PopulateGenresTable.Designer.cs">
       <DependentUpon>201901032319375_PopulateGenresTable.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201901100425315_AddForeignKeyPropertiesToGig.cs" />
+    <Compile Include="Migrations\201901100425315_AddForeignKeyPropertiesToGig.Designer.cs">
+      <DependentUpon>201901100425315_AddForeignKeyPropertiesToGig.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\ApplicationDbContext.cs" />
@@ -315,6 +319,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201901032319375_PopulateGenresTable.resx">
       <DependentUpon>201901032319375_PopulateGenresTable.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201901100425315_AddForeignKeyPropertiesToGig.resx">
+      <DependentUpon>201901100425315_AddForeignKeyPropertiesToGig.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
