--- a/GigHub/GigHub.csproj
+++ b/GigHub/GigHub.csproj
@@ -223,6 +223,10 @@
     <Compile Include="Migrations\201901100425315_AddForeignKeyPropertiesToGig.Designer.cs">
       <DependentUpon>201901100425315_AddForeignKeyPropertiesToGig.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201901180330148_AddNameToApplicationUser.cs" />
+    <Compile Include="Migrations\201901180330148_AddNameToApplicationUser.Designer.cs">
+      <DependentUpon>201901180330148_AddNameToApplicationUser.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\ApplicationDbContext.cs" />
@@ -324,6 +328,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201901100425315_AddForeignKeyPropertiesToGig.resx">
       <DependentUpon>201901100425315_AddForeignKeyPropertiesToGig.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201901180330148_AddNameToApplicationUser.resx">
+      <DependentUpon>201901180330148_AddNameToApplicationUser.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
